--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<title>프론트엔드 개발자 구민정</title>
+	<title>백엔드 개발자 정세인</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -92,10 +92,10 @@
 							<h2 class="mb-4">About Me</h2>
 							<p>커피와 노트북만 있다면, 언제 어디서나 즐겁게 일하는 6년차 개발자 정쿠입니다. </p>
 							<ul class="about-info mt-4 px-md-0 px-2">
-								<li class="d-flex"><span>Name:</span> <span>구민정</span></li>
-								<li class="d-flex"><span>Address:</span> <span>성남시 분당구 정자동</span></li>
-								<li class="d-flex"><span>Email:</span> <span>cookie00421@gmail.com</span></li>
-								<li class="d-flex"><span>Phone: </span> <span>+82-10-1234-5678</span></li>
+								<li class="d-flex"><span>Name:</span> <span>정세인</span></li>
+								<li class="d-flex"><span>Address:</span> <span>대구시광역시 동구</span></li>
+								<li class="d-flex"><span>Email:</span> <span>dha802327@gmail.com</span></li>
+								<li class="d-flex"><span>Phone: </span> <span>+82-10-9404-6005</span></li>
 							</ul>
 						</div>
 					</div>
