--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 					<li class="nav-item"><a href="#about-section" class="nav-link"><span>About</span></a></li>
 					<li class="nav-item"><a href="#education-section" class="nav-link"><span>Education</span></a></li>
 					<li class="nav-item"><a href="#projects-section" class="nav-link"><span>Projects</span></a></li>
-					<li class="nav-item"><a href="#side-projects-section" class="nav-link"><span>Side
+					<li class="nav-item"><a href="#side-projects-section" class="nav-link"><span>Other
 								Projects</span></a>
 					</li>
 					<li class="nav-item"><a href="#blog-section" class="nav-link"><span>My Blog</span></a></li>
@@ -390,25 +390,24 @@
 								<span class="flaticon-ideas"></span>
 							</div>
 							<div class="text pl-3">
-								<span class="date">2019.09-2020.08</span>
+								<span class="date">2019.09.11-2020.10.23</span>
 								<div class="d-flex">
-									<h2>웰리스 여행 상품 예약 플랫폼 개발</h2>
+									<h2>배달웹, 대구요</h2>
 									<div>&nbsp;<a class="btn btn-outline-secondary" target="_blank"
 											class="btn btn-outline-secondary"
 											href="https://github.com/congchu/portfolio-template-2">Github</a>&nbsp;<a
 											class="btn btn-outline-secondary" target="_blank"
-											href="/images/project_1_screenshot.png">스크린샷</a>&nbsp;<a
+											href="https://drive.google.com/file/d/1Zpe0hPe-t_Az58f4ltQGDdY_JrN96Rc9/view?usp=drive_link">Storyboard</a>&nbsp;<a
 											class="btn btn-outline-secondary" target="_blank"
-											href="https://www.wellytravel.com/">Link</a>
+											href="13.124.5.191/daeguyo">website</a>
 									</div>
 								</div>
-								<span class="position">주식회사 더라피스</span>
-								<div> <b class="text-dark">기술 스택 : </b>React, Typescript, Next.js, Styled-Component,
-									MobX
+								<!-- <span class="position">주식회사 더라피스</span> -->
+								<div> <b class="text-dark">기술 스택 : </b>Javascript, Mysql, Mybatis, SpringBoot
 								</div>
-								<div> <b class="text-dark">주요 기능 : </b> 회원 관리 및 SNS 로그인, 상품 리스트 확인, 상품 상세 정보
-									확인, 예약 관리, 결제 </div>
-								<p> React </p>
+								<div> <b class="text-dark">주요 기능 : </b> 회원가입 및 SNS로그인, 이메일인증, 상품 상세 정보
+									주문관리, 리뷰관리, 결제 </div>
+								<p> 팀프로젝트 </p>
 							</div>
 						</div>
 						<div class="resume-wrap d-flex ftco-animate">
@@ -416,16 +415,22 @@
 								<span class="flaticon-ideas"></span>
 							</div>
 							<div class="text pl-3">
-								<span class="date">2014-2015</span>
-								<h2>Top 5 LeaderShip Exellence Winner</h2>
-								<span class="position">Cambridge University</span>
-								<p>A small river named Duden flows by their place and supplies it with the necessary
+								<span class="date">2023.11 ~</span>
+								<h2>영화평점사이트</h2>
+								<span class="position">개인프로젝트</span>
+								<div>&nbsp;<a class="btn btn-outline-secondary" target="_blank"
+									class="btn btn-outline-secondary"
+									href="https://github.com/sensen52/MovieRating">Github</a>&nbsp;</a>
+							</div>
+							<div> <b class="text-dark">주요 기능 : </b> 회원가입, 리뷰기능, 영화 상세 정보
+								별점관리</div>
+								<!-- <p>A small river named Duden flows by their place and supplies it with the necessary
 									regelialia. It is a paradisematic country, in which roasted parts of sentences
 									fly
-									into your mouth.</p>
+									into your mouth.</p> -->
 							</div>
 						</div>
-						<div class="resume-wrap d-flex ftco-animate">
+					<!-- 	<div class="resume-wrap d-flex ftco-animate">
 							<div class="icon d-flex align-items-center justify-content-center">
 								<span class="flaticon-ideas"></span>
 							</div>
@@ -438,8 +443,8 @@
 									fly
 									into your mouth.</p>
 							</div>
-						</div>
-						<div class="resume-wrap d-flex ftco-animate">
+						</div> -->
+						<!-- <div class="resume-wrap d-flex ftco-animate">
 							<div class="icon d-flex align-items-center justify-content-center">
 								<span class="flaticon-ideas"></span>
 							</div>
@@ -452,7 +457,7 @@
 									fly
 									into your mouth.</p>
 							</div>
-						</div>
+						</div> -->
 					</div>
 				</div>
 			</div>
@@ -465,18 +470,18 @@
 			<div class="row no-gutters justify-content-center pb-5">
 				<div class="col-md-12 heading-section text-center ftco-animate">
 					<h1 class="big big-2">Projects</h1>
-					<h2 id="side-projects-section" class="mb-4">Side Projects</h2>
-					<p>꾸준히 사이드 프로젝트를 진행하며, 다양한 분야의 기술 스택을 경험해왔습니다.</p>
+					<h2 id="side-projects-section" class="mb-4">Publishing & Design</h2>
+					<p>완성도 있는 웹사이트를 만들기위한, 퍼블리싱과 디자인 개발 분야에서 다양한 경험을 쌓아왔습니다</p>
 				</div>
 			</div>
 			<div class="row no-gutters">
 				<div class="col-md-4">
 					<div class="project img ftco-animate d-flex justify-content-center align-items-center"
-						style="background-image: url(images/side-project-1.png);">
+						style="background-image: url(images/side-project.png);">
 						<div class="overlay"></div>
 						<div class="text text-center p-4">
-							<h3><a target="_blank" href="https://qpi.kr/"> QPI - 소개팅 서비스 소개 페이지 개발</a></h3>
-							<span>UI/UX 디자인부터 웹 호스팅까지 전체 영역을 담당하였습니다.</span>
+							<h3><a target="_blank" href="http://tpdls369999.dothome.co.kr/maxclinic/"> 맥스클리닉 웹사이트 퍼블리싱</a></h3>
+							<span>UI/UX 디자인부터 웹 호스팅까지 제작했습니다</span>
 						</div>
 					</div>
 				</div>
@@ -485,8 +490,8 @@
 						style="background-image: url(images/work-2.jpg);">
 						<div class="overlay"></div>
 						<div class="text text-center p-4">
-							<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-							<span>Web Design</span>
+							<h3><a href="http://tpdls369999.dothome.co.kr/hanhwa/">한화인 웹사이트 퍼블리싱</a></h3>
+							<span>UI/UX 디자인부터 웹 호스팅까지 제작했습니다.</span>
 						</div>
 					</div>
 				</div>
@@ -506,7 +511,7 @@
 						style="background-image: url(images/work-4.jpg);">
 						<div class="overlay"></div>
 						<div class="text text-center p-4">
-							<h3><a href="#">Branding &amp; Illustration Design</a></h3>
+							<h3><a href="#">Micro Site &amp; Illustration Design</a></h3>
 							<span>Web Design</span>
 						</div>
 					</div>
@@ -516,8 +521,8 @@
 						style="background-image: url(images/work-5.jpg);">
 						<div class="overlay"></div>
 						<div class="text text-center p-4">
-							<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-							<span>Web Design</span>
+							<h3><a href="#">야나두 상세페이지 &amp; Illustration Design</a></h3>
+							<span>App Design</span>
 						</div>
 					</div>
 				</div>
@@ -526,7 +531,7 @@
 						style="background-image: url(images/work-6.jpg);">
 						<div class="overlay"></div>
 						<div class="text text-center p-4">
-							<h3><a href="#">Branding &amp; Illustration Design</a></h3>
+							<h3><a href="#">앱 UX UI &amp; Illustration Design</a></h3>
 							<span>Web Design</span>
 						</div>
 					</div>
@@ -541,11 +546,11 @@
 				<div class="col-md-7 heading-section text-center ftco-animate">
 					<h1 class="big big-2">Blog</h1>
 					<h2 class="mb-4">My Blog</h2>
-					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+					<p>"True effort never betrays the results"</p>
 				</div>
 			</div>
 			<div class="row d-flex">
-				<div class="col-md-4 d-flex ftco-animate">
+				<!-- <div class="col-md-4 d-flex ftco-animate">
 					<div class="blog-entry justify-content-end">
 						<a href="single.html" class="block-20" style="background-image: url('images/image_1.jpg');">
 						</a>
@@ -553,18 +558,18 @@
 							<h3 class="heading"><a href="single.html">Why Lead Generation is Key for Business Growth</a>
 							</h3>
 							<div class="d-flex align-items-center mb-3 meta">
-								<p class="mb-0">
-									<span class="mr-2">Sept. 12, 2019</span>
-									<a href="#" class="mr-2">Admin</a>
-									<a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a>
-								</p>
+								<p class="mb-0"> -->
+									<!-- <span class="mr-2">Sept. 12, 2019</span> -->
+									<!-- <a href="#" class="mr-2">Admin</a>
+									<a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a> -->
+								<!-- </p>
 							</div>
 							<p>A small river named Duden flows by their place and supplies it with the necessary
 								regelialia.</p>
 						</div>
 					</div>
-				</div>
-				<div class="col-md-4 d-flex ftco-animate">
+				</div> -->
+				<!-- <div class="col-md-4 d-flex ftco-animate">
 					<div class="blog-entry justify-content-end">
 						<a href="single.html" class="block-20" style="background-image: url('images/image_2.jpg');">
 						</a>
@@ -582,23 +587,22 @@
 								regelialia.</p>
 						</div>
 					</div>
-				</div>
+				</div> -->
 				<div class="col-md-4 d-flex ftco-animate">
 					<div class="blog-entry">
-						<a href="single.html" class="block-20" style="background-image: url('images/image_3.jpg');">
+						<a href="https://velog.io/@tpdls36999" class="block-20" style="background-image: url('images/image_3.jpg');">
 						</a>
 						<div class="text mt-3 float-right d-block">
-							<h3 class="heading"><a href="single.html">Why Lead Generation is Key for Business Growth</a>
+							<h3 class="heading"><a href="https://velog.io/@tpdls36999"></a>
 							</h3>
 							<div class="d-flex align-items-center mb-3 meta">
 								<p class="mb-0">
-									<span class="mr-2">Sept. 12, 2019</span>
-									<a href="#" class="mr-2">Admin</a>
-									<a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a>
+									<span class="mr-2">2023년 부터의 경험</span>
+									<!-- <a href="#" class="mr-2"></a> -->
+									<a href="#" class="meta-chat"><span class="icon-chat"></span> Velog</a>
 								</p>
 							</div>
-							<p>A small river named Duden flows by their place and supplies it with the necessary
-								regelialia.</p>
+							<p>노력은 언제나 결과를 배신하지 않듯이, 제가 경험한 다양한 오류들이 인생의 과제들을 해결해 나가는 일에 기여한다고 생각합니다</p>
 						</div>
 					</div>
 				</div>
@@ -612,7 +616,7 @@
 			<div class="row justify-content-center">
 				<div class="col-md-7 ftco-animate text-center">
 					<h2>함께할 <span>회사를 찾는 중</span> 입니다.</h2>
-					<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+					<!-- <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p> -->
 					<p class="mb-0"><a href="#" class="btn btn-primary py-3 px-5">연락주세요.</a></p>
 				</div>
 			</div>
@@ -687,11 +691,12 @@
 				<div class="col-md-12 text-center">
 					<p>
 						<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-						Copyright &copy;
+						<!-- Copyright &copy;
 						<script>document.write(new Date().getFullYear());</script> All rights reserved | This template
 						is made with <i class="icon-heart color-danger" aria-hidden="true"></i> by <a
-							href="https://colorlib.com" target="_blank">Colorlib</a>
+							href="https://colorlib.com" target="_blank">Colorlib</a> -->
 						<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+						@COPYRIGHT JUNGSEIN PORTFOLIO
 					</p>
 				</div>
 			</div>
