--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
 											class="btn btn-outline-secondary"
 											href="https://github.com/congchu/portfolio-template-2">Github</a>&nbsp;<a
 											class="btn btn-outline-secondary" target="_blank"
-											href="https://drive.google.com/file/d/1Zpe0hPe-t_Az58f4ltQGDdY_JrN96Rc9/view?usp=drive_link">Storyboard</a>&nbsp;<a
+											href="https://drive.google.com/file/d/1Zpe0hPe-t_Az58f4ltQGDdY_JrN96Rc9/view?usp=drive_link">기획서</a>&nbsp;<a
 											class="btn btn-outline-secondary" target="_blank"
 											href="13.124.5.191/daeguyo">website</a>
 									</div>
