--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
 							<div class="text pl-3">
 								<span class="date">2019.09.11-2020.10.23</span>
 								<div class="d-flex">
-									<h2>배달웹, 대구요</h2>
+									<h2>대구요</h2>
 									<div>&nbsp;<a class="btn btn-outline-secondary" target="_blank"
 											class="btn btn-outline-secondary"
 											href="https://github.com/congchu/portfolio-template-2">Github</a>&nbsp;<a
