--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
 									<h2>대구요</h2>
 									<div>&nbsp;<a class="btn btn-outline-secondary" target="_blank"
 											class="btn btn-outline-secondary"
-											href="https://github.com/congchu/portfolio-template-2">Github</a>&nbsp;<a
+											href="https://github.com/sensen52/DAEGUYO">Github</a>&nbsp;<a
 											class="btn btn-outline-secondary" target="_blank"
 											href="https://drive.google.com/file/d/1Zpe0hPe-t_Az58f4ltQGDdY_JrN96Rc9/view?usp=drive_link">기획서</a>&nbsp;<a
 											class="btn btn-outline-secondary" target="_blank"
@@ -403,7 +403,7 @@
 									</div>
 								</div>
 								<!-- <span class="position">주식회사 더라피스</span> -->
-								<div> <b class="text-dark">기술 스택 : </b>Javascript, Mysql, Mybatis, SpringBoot
+								<div> <b class="text-dark">기술 스택 : </b>Javascript, Mysql, Mybatis, SpringBoot, AWS
 								</div>
 								<div> <b class="text-dark">주요 기능 : </b> 회원가입 및 SNS로그인, 이메일인증, 상품 상세 정보
 									주문관리, 리뷰관리, 결제 </div>
