--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 						<h1>정세인</h1>
 						<h2>I'm a
 							<span class="txt-rotate" data-period="500"
-								data-rotate='["BACKEND DEVELOPER", "TRIER", "WEB DEVELOPER"]'></span>
+								data-rotate='["TRIER", "ARTIST", "DEVELOPER"]'></span>
 						</h2>
 					</div>
 				</div>
@@ -90,10 +90,10 @@
 						<div class="col-md-12 heading-section ftco-animate">
 							<h1 class="big">About</h1>
 							<h2 class="mb-4">About Me</h2>
-							<p>새로운 도전을 즐기는 신입개발자 정세인 입니다! </p>
+							<p>문화와 도전을 즐기는 정세인 입니다! </p>
 							<ul class="about-info mt-4 px-md-0 px-2">
 								<li class="d-flex"><span>Name:</span> <span>정세인</span></li>
-								<li class="d-flex"><span>Address:</span> <span>대구시광역시 동구</span></li>
+								<li class="d-flex"><span>Address:</span> <span>서울시 금천구 가산동</span></li>
 								<li class="d-flex"><span>Email:</span> <span>dha802327@gmail.com</span></li>
 								<li class="d-flex"><span>Phone: </span> <span>+82-10-9404-6005</span></li>
 							</ul>
@@ -105,9 +105,6 @@
 								<!-- <span class="number" data-number="24">0</span>
 								<span>Project complete</span> -->
 							</p>
-							<p><a target="_blank"
-									href="https://drive.google.com/file/d/1UaLgZplbMetQiX66XzypAiWNFZu-Trsc/view?usp=drive_link"
-									class="btn btn-primary py-3 px-3">이력서 다운받기</a></p>
 						</div>
 					</div>
 				</div>
@@ -122,7 +119,7 @@
 					<div class="block-18 shadow">
 						<div class="text">
 							<strong class="number" data-number="365">0</strong>
-							<span>Days of coding</span>
+							<span>Days of enjoy culture</span>
 						</div>
 					</div>
 				</div>
@@ -267,6 +264,19 @@
 								<p>재학중인 학생을 대상으로 디자인 및 코딩 기초 튜터링 진행</p>
 							</div>
 						</div>
+
+						<div class="resume-wrap d-flex ftco-animate">
+							<div class="icon d-flex align-items-center justify-content-center">
+								<span class="flaticon-ideas"></span>
+							</div>
+							<div class="text pl-3">
+								<span class="date">2023.01 ~ 2024.02</span>
+								<h2>culture Experience</h2>
+								<span class="position">청년활동</span>
+								<p>대구광역시 교육청 일러스트 삽화</p>
+								<p>청년문화활동 서적 "사투리안쓴다 아니에요?" 삽화 제작</p>
+							</div>
+						</div>
 					</div>
 					<div id="page-3" class="page three">
 						<h2 class="heading">Skills</h2>
@@ -274,7 +284,7 @@
 						<div class="row">
 							<div class="col-md-6 animate-box">
 								<div class="progress-wrap ftco-animate">
-									<h3>HTML5</h3>
+									<h3>Develper tools</h3>
 									<div class="progress">
 										<div class="progress-bar color-1" role="progressbar" aria-valuenow="90"
 											aria-valuemin="0" aria-valuemax="100" style="width:100%">
@@ -285,7 +295,7 @@
 							</div>
 							<div class="col-md-6 animate-box">
 								<div class="progress-wrap ftco-animate">
-									<h3>CSS3</h3>
+									<h3>Illust</h3>
 									<div class="progress">
 										<div class="progress-bar color-2" role="progressbar" aria-valuenow="85"
 											aria-valuemin="0" aria-valuemax="100" style="width:100%">
@@ -296,7 +306,7 @@
 							</div>
 							<div class="col-md-6 animate-box">
 								<div class="progress-wrap ftco-animate">
-									<h3>Jquery</h3>
+									<h3>Photoshop</h3>
 									<div class="progress">
 										<div class="progress-bar color-3" role="progressbar" aria-valuenow="95"
 											aria-valuemin="0" aria-valuemax="100" style="width:100%">
@@ -307,7 +317,7 @@
 							</div>
 							<div class="col-md-6 animate-box">
 								<div class="progress-wrap ftco-animate">
-									<h3>React</h3>
+									<h3>Premiere</h3>
 									<div class="progress">
 										<div class="progress-bar color-4" role="progressbar" aria-valuenow="90"
 											aria-valuemin="0" aria-valuemax="100" style="width:100%">
@@ -318,7 +328,7 @@
 							</div>
 							<div class="col-md-6 animate-box">
 								<div class="progress-wrap ftco-animate">
-									<h3>NodeJs</h3>
+									<h3>After Effect</h3>
 									<div class="progress">
 										<div class="progress-bar color-5" role="progressbar" aria-valuenow="70"
 											aria-valuemin="0" aria-valuemax="100" style="width:100%">
@@ -329,7 +339,7 @@
 							</div>
 							<div class="col-md-6 animate-box">
 								<div class="progress-wrap ftco-animate">
-									<h3>Java</h3>
+									<h3>Filming</h3>
 									<div class="progress">
 										<div class="progress-bar color-6" role="progressbar" aria-valuenow="80"
 											aria-valuemin="0" aria-valuemax="100" style="width:100%">
@@ -340,7 +350,7 @@
 							</div>
 							<div class="col-md-6 animate-box">
 								<div class="progress-wrap ftco-animate">
-									<h3>Javascript</h3>
+									<h3>Singing</h3>
 									<div class="progress">
 										<div class="progress-bar color-6" role="progressbar" aria-valuenow="80"
 											aria-valuemin="0" aria-valuemax="100" style="width:100%">
@@ -351,7 +361,7 @@
 							</div>
 							<div class="col-md-6 animate-box">
 								<div class="progress-wrap ftco-animate">
-									<h3>Springframework</h3>
+									<h3>Smile</h3>
 									<div class="progress">
 										<div class="progress-bar color-6" role="progressbar" aria-valuenow="80"
 											aria-valuemin="0" aria-valuemax="100" style="width:100%">
@@ -360,31 +370,10 @@
 									</div>
 								</div>
 							</div>
-							<div class="col-md-6 animate-box">
-								<div class="progress-wrap ftco-animate">
-									<h3>SpringBoot</h3>
-									<div class="progress">
-										<div class="progress-bar color-6" role="progressbar" aria-valuenow="80"
-											aria-valuemin="0" aria-valuemax="100" style="width:100%">
-											<!-- <span>80%</span> -->
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="col-md-6 animate-box">
-								<div class="progress-wrap ftco-animate">
-									<h3>Jsp,Servlet</h3>
-									<div class="progress">
-										<div class="progress-bar color-6" role="progressbar" aria-valuenow="80"
-											aria-valuemin="0" aria-valuemax="100" style="width:100%">
-											<!-- <span>80%</span> -->
-										</div>
-									</div>
-								</div>
-							</div>
+							
 						</div>
 					</div>
-					<div id="page-4" class="page four">
+					<!-- <div id="page-4" class="page four">
 						<h2 id="projects-section" class="heading">Projects</h2>
 						<div class="resume-wrap d-flex ftco-animate">
 							<div class="icon d-flex align-items-center justify-content-center">
@@ -459,7 +448,7 @@
 									into your mouth.</p>
 							</div>
 						</div> -->
-					</div>
+					</div> -->
 				</div>
 			</div>
 		</div>
@@ -541,6 +530,7 @@
 		</div>
 	</section>
 
+
 	<section class="ftco-section" id="blog-section">
 		<div class="container">
 			<div class="row justify-content-center mb-5 pb-5">
@@ -616,7 +606,7 @@
 		<div class="container">
 			<div class="row justify-content-center">
 				<div class="col-md-7 ftco-animate text-center">
-					<h2>함께할 <span>회사를 찾는 중</span> 입니다.</h2>
+					<h2>에스키스 가산과 <span>새로운 가능성을</span>탐색하고 싶습니다.</h2>
 					<!-- <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p> -->
 					<p class="mb-0"><a href="#" class="btn btn-primary py-3 px-5">연락주세요.</a></p>
 				</div>
@@ -630,7 +620,7 @@
 				<div class="col-md-7 heading-section text-center ftco-animate">
 					<h1 class="big big-2">Contact</h1>
 					<h2 class="mb-4">Contact Me</h2>
-					<p>회사와 함께 성장하는 개발자가 되겠습니다. 연락주세요.</p>
+					<!-- <p>회사와 함께 성장하는 개발자가 되겠습니다. 연락주세요.</p> -->
 				</div>
 			</div>
 
@@ -642,7 +632,7 @@
 						</div>
 						<div>
 							<h3 class="mb-4">Address</h3>
-							<p>대구시 동구 동촌동</p>
+							<p>서울시 가산동</p>
 						</div>
 					</div>
 				</div>
@@ -673,10 +663,10 @@
 						<div class="icon d-flex align-items-center justify-content-center">
 							<span class="icon-globe"></span>
 						</div>
-						<div>
+						<!-- <div>
 							<h3 class="mb-4">Website</h3>
 							<p><a href="https://github.com/sensen52">My github</a></p>
-						</div>
+						</div> -->
 					</div>
 				</div>
 			</div>
