--- a/index.html
+++ b/index.html
@@ -393,14 +393,14 @@
 									</div>
 								</div>
 								<!-- <span class="position">주식회사 더라피스</span> -->
-								<div> <b class="text-dark">기술 스택 : </b>Javascript, Mysql, Mybatis, SpringBoot, AWS
+								<!-- <div> <b class="text-dark">기술 스택 : </b>Javascript, Mysql, Mybatis, SpringBoot, AWS
 								</div>
 								<div> <b class="text-dark">주요 기능 : </b> 회원가입 및 SNS로그인, 이메일인증, 상품 상세 정보
 									주문관리, 리뷰관리, 결제 </div>
 								<p> 팀프로젝트 </p>
-							</div>
-						</div>
-						<div class="resume-wrap d-flex ftco-animate">
+							</div> -->
+						<!-- </div> -->
+						<!-- <div class="resume-wrap d-flex ftco-animate">
 							<div class="icon d-flex align-items-center justify-content-center">
 								<span class="flaticon-ideas"></span>
 							</div>
@@ -419,7 +419,7 @@
 									fly
 									into your mouth.</p> -->
 							</div>
-						</div>
+						</div> -->
 					<!-- 	<div class="resume-wrap d-flex ftco-animate">
 							<div class="icon d-flex align-items-center justify-content-center">
 								<span class="flaticon-ideas"></span>
