--- a/index.html
+++ b/index.html
@@ -277,6 +277,18 @@
 								<p>청년문화활동 서적 "사투리안쓴다 아니에요?" 삽화 제작</p>
 							</div>
 						</div>
+						
+						<div class="resume-wrap d-flex ftco-animate">
+							<div class="icon d-flex align-items-center justify-content-center">
+								<span class="flaticon-ideas"></span>
+							</div>
+							<div class="text pl-3">
+								<span class="date">2024.03 ~ </span>
+								<h2>Developer</h2>
+								<span class="position">지투이</span>
+								<p>혈당관리기기 소프트웨어 개발 및 콘텐츠 개발</p>
+							</div>
+						</div>
 					</div>
 					<div id="page-3" class="page three">
 						<h2 class="heading">Skills</h2>
